force-app/main/default/objects/cgcloud__Visit_Template__c/cgcloud__Visit_Template__c.object-meta.xml
<CustomObject>
    <description>Template describing basic call behaviour.</description>
    <label>Visit Template</label>
    <nameField>
        <label>Visit Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>