force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Add_Job_Policy__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Add_Job_Policy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Job Policy</label>
    <type>Checkbox</type>
</CustomField>