force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Auto_Status__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Auto_Status__c</fullName>
    <label>Auto Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Abandoned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>