force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Capture_Proceeding_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Capture_Proceeding_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Capture Proceeding Time</description>
    <label>Capture Proceeding Time</label>
    <type>Checkbox</type>
</CustomField>