force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Check_Overlap__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Check_Overlap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Overlap</label>
    <type>Checkbox</type>
</CustomField>