force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Cmpl_Vst_Geolc_Validation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Cmpl_Vst_Geolc_Validation__c</fullName>
    <description>Specifies the validation type when a user completes a visit, based on the comparison between their GPS location and the geolocation of the store.</description>
    <label>Complete Visit Geolocation Validation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>