force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Company_Required__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Company_Required__c</fullName>
    <description>Company Required</description>
    <label>Company Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not required</fullName>
                <default>true</default>
                <label>Not required</label>
            </value>
            <value>
                <fullName>Mandatory</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>