force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Consider_POS_Check__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consider_POS_Check__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If it is True, then Call will consider POS in it&apos;s questions.</description>
    <label>Consider POS Check</label>
    <type>Checkbox</type>
</CustomField>