force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Default_Duration__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Default_Duration__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Default Duration</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>