force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Delete_Allowed__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Delete_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DeleteAllowed</description>
    <label>Delete Allowed</label>
    <type>Checkbox</type>
</CustomField>