force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Derivation_Threshold__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Derivation_Threshold__c</fullName>
    <description>Derivation Threshold</description>
    <label>Derivation Threshold</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>