force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Display_Promotions__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Display_Promotions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Promotions</label>
    <type>Checkbox</type>
</CustomField>