force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Does_Show_Read_Only_Visit_Info__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Does_Show_Read_Only_Visit_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if an information message that the visit hasn&apos;t started and is in read-only mode is shown to the user. Applicable only when Start Visit Required to Edit field is True.</description>
    <inlineHelpText>Select this option to display a message to the user indicating that the visit hasn’t started and is read-only.</inlineHelpText>
    <label>Show Read Only Visit Information</label>
    <type>Checkbox</type>
</CustomField>