force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Historical_Products__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Historical_Products__c</fullName>
    <description>Historical Products</description>
    <label>Historical Products</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>SameMeta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>