force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Is_Start_Visit_Rqr_To_Check_In__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Start_Visit_Rqr_To_Check_In__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if a user has to start a visit before check in can occur.</description>
    <inlineHelpText>Select this option when the user has to start a visit before check in can occur.</inlineHelpText>
    <label>Start Visit Required to Check In</label>
    <type>Checkbox</type>
</CustomField>