force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__KPI_Relevant__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__KPI_Relevant__c</fullName>
    <description>Defines if a call is relevant for KPI calculation for the selected KPIs.</description>
    <inlineHelpText>Defines if a call is relevant for KPI calculation for the selected KPIs.</inlineHelpText>
    <label>KPI Relevant</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
                <label>All KPIs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>