force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Limit_To_One_Visit_In_Progress__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Limit_To_One_Visit_In_Progress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a user is limited to having one visit in progress.</description>
    <inlineHelpText>Limits the user to having one visit in progress.</inlineHelpText>
    <label>Limit to One Visit In Progress</label>
    <type>Checkbox</type>
</CustomField>