force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Loc_Capture_At_Start__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Loc_Capture_At_Start__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Location Capture at Start</description>
    <inlineHelpText>Indicates whether a user’s GPS location is captured at the start of a visit.</inlineHelpText>
    <label>Location Capture at Start</label>
    <type>Checkbox</type>
</CustomField>