force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Loc_Capture_During_Cancel__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Loc_Capture_During_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Location Capture at Cancel</description>
    <label>Location Capture at Cancel</label>
    <type>Checkbox</type>
</CustomField>