force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Loc_Capture_During_Complete__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Loc_Capture_During_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Location Capture at Complete</description>
    <label>Location Capture at Complete</label>
    <type>Checkbox</type>
</CustomField>