force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Max_Pictures__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Max_Pictures__c</fullName>
    <description>Max. Number of Pictures</description>
    <label>Max. Number of Pictures</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>