force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Meta_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Meta_Type__c</fullName>
    <label>Meta Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
                <default>true</default>
                <label>Visit</label>
            </value>
            <value>
                <fullName>DeliveryVisit</fullName>
                <label>Delivery Visit</label>
            </value>
            <value>
                <fullName>VanSales</fullName>
                <label>Van Sales</label>
            </value>
            <value>
                <fullName>Merchandising</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>