force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Mobility_User_Guidance__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Mobility_User_Guidance__c</fullName>
    <description>Mobility User Guidance</description>
    <label>Mobility User Guidance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales</fullName>
                <default>true</default>
                <label>Sales</label>
            </value>
            <value>
                <fullName>Merchandizing</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>NonCustomer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>