force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Promotion_Finding_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Finding_Lead_Time__c</fullName>
    <label>Promotion Finding Lead Time</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>