force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Sync_Options__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sync_Options__c</fullName>
    <description>Sync Options</description>
    <label>Sync Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>CompleteCall</fullName>
            </value>
            <value>
                <fullName>CancelCall</fullName>
            </value>
            <value>
                <fullName>CompleteCancelCall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>