force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Tag_Media_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tag_Media_Date_Time__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tag Media Date and Time</description>
    <label>Tag Media Date and Time</label>
    <type>Checkbox</type>
</CustomField>