force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Tag_Media_Geo_Location__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tag_Media_Geo_Location__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Tag Media Geo Location</description>
    <label>Tag Media Geo Location</label>
    <type>Checkbox</type>
</CustomField>