force-app/main/default/objects/cgcloud__Visit_Template__c/fields/cgcloud__Update_Planned_Times__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Update_Planned_Times__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Update Planned Times</description>
    <label>Update Planned Times</label>
    <type>Checkbox</type>
</CustomField>